salesforce/main/default/objects/Weather_Report__c/Weather_Report__c.object-meta.xml
<CustomObject>
    <label>Weather Report</label>
    <nameField>
        <label>Weather Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Weather Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>