salesforce/main/default/objects/Weather_Report__c/fields/Chart_Image_Id__c.field-meta.xml
<CustomField>
    <fullName>Chart_Image_Id__c</fullName>
    <label>DEPRECATED - Chart Image Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>