salesforce/main/default/objects/Weather_Report__c/fields/Forecast__c.field-meta.xml
<CustomField>
    <fullName>Forecast__c</fullName>
    <label>Forecast</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>