salesforce/main/default/objects/Weather_Report__c/fields/Import_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Import_Timestamp__c</fullName>
    <label>DEPRECATED - Import Timestamp</label>
    <type>DateTime</type>
</CustomField>