salesforce/main/default/objects/Weather_Report__c/fields/PDF_Hash_4_4__c.field-meta.xml
<CustomField>
    <fullName>PDF_Hash_4_4__c</fullName>
    <formula>IF(LEN(PDF_Hash__c) &gt; 0, LEFT(PDF_Hash__c, 4) + &quot;..&quot; + RIGHT(PDF_Hash__c, 4), &quot; - &quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PDF Hash (4..4)</label>
    <type>Text</type>
</CustomField>