salesforce/main/default/objects/Weather_Report__c/fields/PDF_Hash__c.field-meta.xml
<CustomField>
    <fullName>PDF_Hash__c</fullName>
    <description>64-character hex string for SHA-256 hash</description>
    <externalId>true</externalId>
    <label>PDF Hash</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>